  (Antonin Décimo, review by Miod Vallat)

- #13243: Enable C compiler warnings internally when building with
  clang-cl or MSVC. Provide fixes too.
  (Antonin Décimo, review by Miod Vallat and Xavier Leroy)

- #13242: Define and use unreachable and trap annotation, and clean-up some
  runtime assertions.
  (Antonin Décimo, review by Miod Vallat, Gabriel Scherer, and David Allsopp)

### Code generation and optimizations:

- #13014: Enable compile-time option -function-sections on all previously
  unsupported native backends (POWER, riscv64 and s390x)
  (Miod Vallat, review by Nicolás Ojeda Bär)

- #7241, #12555, #13076, #13138, #13338, #13152, #13153, #13154:
  fix a soundness bug in the pattern-matching compiler
  when side-effects mutate the scrutinee during matching.
  (Gabriel Scherer, review by Nick Roberts)

- #13341: a warning when the pattern-matching compiler pessimizes code
  because side-effects may mutate the scrutinee during
  matching. (This warning is disabled by default, as this rarely
  happens and its performance impact is typically not noticeable.)
  (Gabriel Scherer, review by Nick Roberts, Florian Angeletti
   and David Allsopp)

- #13179: Fix evaluation of toplevel lets in classes containing
  local opens
  (Vincent Laviron, review by Hugo Heuzard, Nathanaëlle Courant
   and Gabriel Scherer)

### Standard library:

- #13310: Add Stdlib.Pair
  (Victoire Noizet, review by Nicolás Ojeda Bär, Daniel Bünzli, Xavier Van de
   Woestyne, Jeremy Yallop and Florian Angeletti)

- #12884: Add `Queue.drop`
  (Léo Andrès, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #13168: In Array.shuffle, clarify the code that validates the
  result of the user-supplied function `rand`, and improve the
  error message that is produced when this result is invalid.
  (François Pottier, review by Florian Angeletti, Daniel Bünzli
   and Gabriel Scherer)

- #12133: Expose support for printing substrings in Format