@@ -246,6 +246,9 @@ ___________
   runtime assertions.
   (Antonin Décimo, review by Miod Vallat, Gabriel Scherer, and David Allsopp)
 
+- #13407: Add Runtime_events.EV_FUTEX_WAIT and EV_EMPTY_MINOR
+  (Thomas Leonard)
+
 ### Code generation and optimizations:
 
 - #13014: Enable compile-time option -function-sections on all previously
